[package]
name = "mlua_scheduler"
version = "1.0.0"
edition = "2021"

[dependencies]
mlua = { version = "0.10.0", features = ["luau", "async", "send"] }
tokio = { version = "1.41.0", features = ["rt", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1.41.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
] }
