[package]
name = "mlua_scheduler_cli"
version = "1.0.0"
edition = "2021"

[dependencies]
mlua = { git = "https://github.com/Anti-Raid/mlua-cont", features = [
    "luau",
], branch = "mlua-listofaux" }
mlua_scheduler = { version = "1.0.0", path = "../scheduler", default-features = false }
tokio = { version = "1", features = ["rt"] }
clap = { version = "4.5.20", features = ["derive", "string"] }
env_logger = "0.11"

[features]
default = []
ncg = ["mlua/luau-jit"]
v2_taskmgr_flume = ["mlua_scheduler/v2_taskmgr_flume"]
send = ["mlua_scheduler/send", "tokio/rt-multi-thread"]
