[package]
name = "mlua_scheduler_ext"
version = "1.0.0"
edition = "2021"

[dependencies]
mlua = { git = "https://github.com/mlua-rs/mlua", features = ["luau"], rev = "5ab97666d726b67d97b1b89bf925e63e917ca167" }
mlua_scheduler = { path = "../scheduler" }
log = "0.4"
tokio = { version = "1", features = ["rt", "sync"] }

[features]
default = []
