[package]
name = "mlua_scheduler_ext"
version = "1.0.0"
edition = "2021"

[dependencies]
mlua = { git = "https://github.com/mlua-rs/mlua", features = ["luau"], rev = "dacddfa967f30709d4097e1913c83903bc03db15" }
mlua_scheduler = { path = "../scheduler" }
log = "0.4"
tokio = { version = "1", features = ["rt", "sync"] }

[features]
default = []
