[package]
name = "mlua_scheduler_ext"
version = "1.0.0"
edition = "2021"

[dependencies]
mlua = { git = "https://github.com/mlua-rs/mlua", features = ["luau"], rev = "cdd6a99136b90d028bf842865136060bd46ce335" }
mlua_scheduler = { path = "../scheduler" }
log = "0.4"
tokio = { version = "1", features = ["rt", "sync"] }

[features]
default = []
