[package]
name = "mlua_scheduler"
version = "1.0.0"
edition = "2021"

[dependencies]
mlua = { git = "https://github.com/Anti-Raid/mlua-cont", features = [
    "luau",
], branch = "mlua-listofaux" }
tokio = { version = "1", features = ["rt", "macros", "fs", "time", "sync"] }
log = "0.4"
futures-util = "0.3.31"
tokio-util = { version = "0.7", features = ["time"] }
flume = { version = "0.11", optional = true }

[features]
default = []
v2_taskmgr_flume = ["dep:flume"]
send = ["mlua/send"]
